# universal-dj-usb

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SPEC_FILES.md  TODO.md  Universal DJ USB.spec  build.ps1  build.sh  cliff.toml  debug_nml.py  debug_paths.py  debug_rekordcrate.py  debug_rekordcrate_advanced.py  debug_structure.py  debug_track_path.py  git-cliff.toml  pyproject.toml  simple_pdb_parser.py  test_project.py  udj.spec  udj_cli.py  udj_cli.spec  udj_cli_macos.spec  udj_cli_windows.spec  udj_gui.py  udj_gui.spec  udj_gui_macos.spec  udj_gui_windows.spec
.github/: copilot-instructions.md  release-drafter.yml
.github/workflows/: build.yml  release.yml
scripts/: cleanup_qt_frameworks.py  compare_nml_files.py  release.sh  update_kaitai.sh
src/universal_dj_usb/: __init__.py  advanced_pdb_parser.py  cli.py  converter.py  gui.py  m3u_generator.py  metadata_extractor.py  models.py  nml_generator.py  parser.py  rekordbox_parser.py  utils.py
src/universal_dj_usb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/universal_dj_usb/assets/: README.md
src/universal_dj_usb/assets/icons/: icono_1024x1024_1024x1024.icns
src/universal_dj_usb/generators/: __init__.py  base.py  m3u.py  m3u8.py  nml.py
src/universal_dj_usb/kaitai/: __init__.py  rekordbox_anlz.py  rekordbox_pdb.py
src/universal_dj_usb/pdb_parser/: __init__.py
tests/: __init__.py  test_generators.py  test_parser.py  test_universal_dj_usb.py  test_workflows.py
windows_TK3_playlist_sample/: Goa.nml  collection.nml
