[tool.poetry]
name = "universal-dj-usb"
version = "0.2.0"
description = "Convert Rekordbox USB playlists to various formats (NML, M3U, M3U8)"
authors = ["Juan Martin <your-email@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/juanmartin/universal-dj-usb"
repository = "https://github.com/juanmartin/universal-dj-usb"
keywords = ["dj", "playlist", "rekordbox", "traktor", "nml", "m3u", "converter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Multimedia :: Sound/Audio",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
click = "^8.0.0"
rich = "^13.0.0"
lxml = "^4.9.0"
kaitaistruct = "^0.10.0"
mutagen = "^1.47.0"
PySide6 = "^6.5.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
udj = "universal_dj_usb.cli:main"
universal-dj-usb = "universal_dj_usb.cli:main"
udj-gui = "universal_dj_usb.gui:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/universal_dj_usb --cov-report=term-missing"
