[project]
name = "universal-dj-usb"
version = "0.1.0-rc1"
description = "Convert Rekordbox USB playlists to various formats (NML, M3U, M3U8)"
authors = [{ name = "Juan Martin", email = "juanmartinsesali@gmail.com" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = "MIT"
keywords = ["dj", "playlist", "rekordbox", "traktor", "nml", "m3u", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0,<9",
    "rich>=13.0.0,<14",
    "lxml>=4.9.0,<5",
    "kaitaistruct>=0.10.0,<0.11",
    "mutagen>=1.47.0,<2",
    "PySide6>=6.5.0,<7",
    "psutil>=5.9.0,<6",
]

[project.urls]
Homepage = "https://github.com/juanmartin/universal-dj-usb"
Repository = "https://github.com/juanmartin/universal-dj-usb"

[project.scripts]
udj = "universal_dj_usb.cli:main"
universal-dj-usb = "universal_dj_usb.cli:main"
udj-gui = "universal_dj_usb.gui:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0,<8",
    "pytest-cov>=4.0.0,<5",
    "black>=23.0.0,<24",
    "isort>=5.0.0,<6",
    "flake8>=6.0.0,<7",
    "mypy>=1.0.0,<2",
    "pyinstaller>=6.0.0,<7",
    "tomli-w>=1.0.0,<2",
    "packaging>=21.0,<25",
]

[tool.hatch.build.targets.sdist]
include = ["src/universal_dj_usb", "src/universal_dj_usb/assets/**/*"]

[tool.hatch.build.targets.wheel]
include = ["src/universal_dj_usb", "src/universal_dj_usb/assets/**/*"]

[tool.hatch.build.targets.wheel.sources]
"src/universal_dj_usb" = "universal_dj_usb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/universal_dj_usb --cov-report=term-missing"
